CHANGES MADE TO THE EDIT DELETE PAGE

--- a/views/editdeletetrigger.ejs
+++ b/views/editdeletetrigger.ejs
@@ -91,7 +91,7 @@
                         <p class="card-text">Surprise level: <%= selectedCardInfo.surprise_level %></p>
                 
                         <!-- Display Contextual Trigger or show 'None' if it's empty -->
-                        <p class="card-text">Contextual Trigger: <%= selectedCardInfo.contextual_trigger || '' %></p>
+                        <p class="card-text">Contextual Trigger: <%= selectedCardInfo.trigger_name|| '' %></p>
                     </div>
                 </div>
 
