Modiified variable in the url

--- a/views/editdeletetrigger.ejs
+++ b/views/editdeletetrigger.ejs
@@ -97,7 +97,7 @@
 
 
 <!-- Your edit form goes here -->
-<form id="editForm" class="row g-6" method="post" action="/views/editdeletetrigger?trigger=<%= trigger %>&moodId=<%= selectedCardInfo.snapshot_id %>">
+<form id="editForm" class="row g-6" method="post" action="/views/editdeletetrigger?trigger=<%= trigger %>&snapshotID=<%= selectedCardInfo.snapshot_id %>">
     <!-- New Contextual Trigger Field -->
     <div class="col-md-6">
         <label for="updatedContextualTrigger" class="form-label">Edit Contextual Trigger:</label>
