--- a/views/editdeletetrigger.ejs
+++ b/views/editdeletetrigger.ejs
@@ -17,10 +17,10 @@
         integrity="correct-fontawesome-integrity-value" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Include jQuery, Popper.js, and Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <!-- Include jQuery, Popper.js, and Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-..." crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 
         <nav class="navbar navbar-expand-lg bg-info navbar-dark">
             <div class="container">
@@ -69,52 +69,73 @@
 
 </head>
 
-<body>
-   
-    <section class="bg-light text-dark p-5 text-center text-sm-start">
-        <div class="container">
-            <div class="shadow p-3 mb-5 bg-white rounded">
-                <h1>Edit Contextual Trigger</h1>
+<!-- Edit and Delete Page -->
+<section class="bg-light text-dark p-5 text-center text-sm-start">
+    <div class="container">
+        <div class="shadow p-3 mb-5 bg-white rounded">
+            <h1>Edit Contextual Trigger</h1>
 
-                <!-- Display the selected mood card information -->
-                <div class="card shadow mb-4">
-                    <div class="card-body">
-                       
-                        <h5 class="card-title">Date and Time: <%= new Date(selectedCardInfo.date_time).toLocaleString() %></h5>
-                        <!--<p class="card-text">mood_id: <%= selectedCardInfo.mood_id %></p> -->
-                        <p class="card-text">Enjoyment level: <%= selectedCardInfo.enjoyment_level %></p>
-                        <p class="card-text">Sadness level: <%= selectedCardInfo.sadness_level %></p>
-                        <p class="card-text">Anger level: <%= selectedCardInfo.anger_level %></p>
-                        <p class="card-text">Contempt level: <%= selectedCardInfo.contempt_level %></p>
-                        <p class="card-text">Disgust level: <%= selectedCardInfo.disgust_level %></p>
-                        <p class="card-text">Fear level: <%= selectedCardInfo.fear_level %></p>
-                        <p class="card-text">Surprise level: <%= selectedCardInfo.surprise_level %></p>
-                
-                        <!-- Display Contextual Trigger or show 'None' if it's empty -->
-                        <p class="card-text">Contextual Trigger: <%= selectedCardInfo.trigger_name|| '' %></p>
-                    </div>
+            <!-- Display the selected mood card information -->
+            <div class="card shadow mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Date and Time: <%= new Date(selectedCardInfo.date_time).toLocaleString() %></h5>
+                    <p class="card-text">Snapshot ID: <%= selectedCardInfo.snapshot_id %></p>
+                    <p class="card-text">Enjoyment level: <%= selectedCardInfo.enjoyment_level %></p>
+                    <p class="card-text">Sadness level: <%= selectedCardInfo.sadness_level %></p>
+                    <p class="card-text">Anger level: <%= selectedCardInfo.anger_level %></p>
+                    <p class="card-text">Contempt level: <%= selectedCardInfo.contempt_level %></p>
+                    <p class="card-text">Disgust level: <%= selectedCardInfo.disgust_level %></p>
+                    <p class="card-text">Fear level: <%= selectedCardInfo.fear_level %></p>
+                    <p class="card-text">Surprise level: <%= selectedCardInfo.surprise_level %></p>
+                    <p class="card-text">Contextual Trigger(s): <%= selectedCardInfo.contextual_triggers ? selectedCardInfo.contextual_triggers: '' %></p>
+
                 </div>
-
-
+            </div>
+            
 <!-- Your edit form goes here -->
-<form id="editForm" class="row g-6" method="post" action="/views/editdeletetrigger?trigger=<%= trigger %>&snapshotID=<%= selectedCardInfo.snapshot_id %>">
-    <!-- New Contextual Trigger Field -->
-    <div class="col-md-6">
-        <label for="updatedContextualTrigger" class="form-label">Edit Contextual Trigger:</label>
-        <div class="input-group">
-            <input type="text" id="updatedContextualTrigger" name="updatedContextualTrigger" class="form-control" value="<%= selectedCardInfo.contextual_trigger !== null ? selectedCardInfo.contextual_trigger : '' %>">
-            <!-- Other input fields for editing -->
-            <button type="submit" class="btn btn-primary" name="updateTrigger">Save Changes</button>
-            <button class="btn btn-danger ms-2" onclick="deleteMood()">Delete Mood</button>
+<form id="editForm" class="row g-6" method="post" action="/views/editdeletetrigger?trigger=<%= trigger %>&moodId=<%= selectedCardInfo.snapshot_id %>">
+    <input type="hidden" name="moodId" value="<%= moodId %>">
+
+<!-- Edit Contextual Trigger Field -->
+<div class="col-md-6">
+    <label for="updatedContextualTriggers" class="form-label">Edit Contextual Triggers:</label>
+    <div class="input-group">
+        <!-- Use a Bootstrap dropdown to select contextual triggers -->
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="contextualTriggerDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                Select Contextual Triggers
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="contextualTriggerDropdown">
+                <% for (let trigger of contextualTriggers) { %>
+                    <li>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="<%= trigger %>" name="updatedContextualTriggers" id="<%= trigger %>" <% if (selectedCardInfo.contextual_triggers && selectedCardInfo.contextual_triggers.includes(trigger)) { %>checked<% } %>>
+                            <label class="form-check-label" for="<%= trigger %>"><%= trigger %></label>
+                        </div>
+                    </li>
+                <% } %>
+            </ul>
         </div>
     </div>
+</div>
+
+<!-- Other input fields for editing and buttons -->
+<div class="col-md-6 d-flex justify-content-end align-items-end">
+    <button type="submit" class="btn btn-primary" name="updateTrigger">Update Snapshot</button>
+    <button id="deleteButton" class="btn btn-danger ms-2" name="deleteSnapshot" onclick="deleteMood()">Delete Snapshot</button>
+</div>
 </form>
 
+
+
+        </div>
+    </div>
+</section>
 
 <script>
     function deleteMood() {
         if (confirm("Are you sure you want to delete this record?")) {
-            var moodId = '<%= selectedCardInfo.snapshot_id %>';
+            var moodId= '<%= selectedCardInfo.snapshot_id %>';
             fetch('/views/deletemood/' + moodId, {
                 method: 'GET',
                 headers: {
@@ -132,11 +153,9 @@
         }
     }
 </script>
-
-
-            </div>
-        </div>
-
 </body>
-
 </html>
+
+
+
+
