--- a/views/history.ejs
+++ b/views/history.ejs
@@ -6,22 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mood History - Mood Trace</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+   <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<link rel="stylesheet" href="/styles/style.css" type="text/css">
 
-    <!-- FontAwesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="correct-fontawesome-integrity-value" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- FontAwesome icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="correct-fontawesome-integrity-value" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Include jQuery, Popper.js, and Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+<!-- Flatpickr CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.9/dist/flatpickr.min.css">
 
-    <!-- Include your custom navbar script with defer -->
+<!-- Include jQuery, Popper.js, and Bootstrap JS -->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+<!-- Include the latest Bootstrap Multiselect CSS and JS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <!-- Flatpickr JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.9/dist/flatpickr.min.js"></script>
     <!--<script type="module" src="header/navbar.js" defer></script>-->
     <!-- <my-navbar></my-navbar> -->
 
@@ -134,7 +142,7 @@
                                 </thead>
                                 <tbody>
                                     <% for (let mood of moods) { %>
-                                        <tr data-contextual-trigger="<%= mood.trigger_name %>" onclick="selectRow(this)" onmouseover="highlightRow(this)" onmouseout="unhighlightRow(this)">
+                                        <tr data-mood-id="<%= mood.snapshot_id %>" data-contextual-trigger="<%= mood.contextual_triggers %>" onclick="selectRow(this)" onmouseover="highlightRow(this)" onmouseout="unhighlightRow(this)">
                                             <td style="font-weight: bold;"><%= new Date(mood.date_time).toLocaleString() %></td>
                                             <td><%= mood.snapshot_id %></td>
                                             <td><%= mood.enjoyment_level %></td>
@@ -145,10 +153,10 @@
                                             <td><%= mood.fear_level %></td>
                                             <td><%= mood.surprise_level %></td>
                                             <td><%= mood.contextual_triggers ? mood.contextual_triggers : 'None' %></td>
-
                                         </tr>
                                     <% } %>
                                 </tbody>
+                                
                             </table>
                         </div>
                     </div>
@@ -158,6 +166,8 @@
         <!-- Back Button -->
         <button class="btn btn-secondary mb-3" onclick="goBack()">Back</button>
     </section>
+
+    
     
     <script>
         function goBack() {
@@ -168,9 +178,10 @@
         function selectRow(row) {
             // Get the contextual trigger value from the selected row
             const contextualTrigger = row.getAttribute('data-contextual-trigger');
+            const moodId = row.getAttribute('data-mood-id'); // Assuming you have a 'data-mood-id' attribute on the row
     
-            // Redirect to the edit and delete page
-            window.location.href = '/views/editdeletetrigger?trigger=' + encodeURIComponent(contextualTrigger);
+            // Redirect to the edit and delete page with both trigger and moodId
+            window.location.href = `/views/editdeletetrigger?trigger=${encodeURIComponent(contextualTrigger)}&moodId=${encodeURIComponent(moodId)}`;
         }
     
         function highlightRow(row) {
@@ -181,6 +192,10 @@
             row.style.backgroundColor = ""; // Reset the background color
         }
     </script>
+    
+
+
+
     
 </body>
 
