FIXED NAVBAR LOGGED IN STATUS AND REMOVED NAVBAR INDEX LINK

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -34,7 +34,8 @@
 
     <!--navbar template-->
     <script src="header/navbar.js" defer></script>
-    <my-navbar></my-navbar>
+    <my-navbar isloggedin="true"></my-navbar>
+
 
 </head>
 
