--- a/views/history.ejs
+++ b/views/history.ejs
@@ -33,7 +33,7 @@
 
     <!--Navbar template and script-->
     <script type="module" src="header/navbar.js" defer></script>
-    <my-navbar></my-navbar> 
+    <my-navbar isloggedin="true"></my-navbar>
 
     <style>
         /* Unique namespace or identifier */
