--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <!-- custom navbar script with defer -->
-    <script src="header/navbarindex.js" defer></script>
+    <script src="header/navbar.js" defer></script>
     <my-navbar></my-navbar>
 
    
