--- a/views/record.ejs
+++ b/views/record.ejs
@@ -69,7 +69,7 @@
 
 <script src="header/navbar.js" defer></script>
 <!--navbar template-->
-<my-navbar></my-navbar>
+<my-navbar isloggedin="true"></my-navbar>
 
 </head>
 
