--- a/views/editdeletetrigger.ejs
+++ b/views/editdeletetrigger.ejs
@@ -23,9 +23,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 
 
-<!--navbar template and script-->
 <script src="header/navbar.js" defer></script>
-<my-navbar></my-navbar>
+<my-navbar isloggedin="true"></my-navbar>
 
    
 </head>
