--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -57,7 +57,7 @@ integrity="correct-fontawesome-integrity-value" crossorigin="anonymous" referrer
                 <div class="statistics-card">
                     <div class="statistics-card-body">
                         <h5 class="statistics-card-title text-center">Emotion levels over time</h5> <!-- Center the title -->
-                        <div id="no-data-message" style="display: none;">No data or not enough snapshot records. Please add 3 or more mood <a href="/record">snapshots</a> to view an emotion chart here</div> 
+                        <div id="no-data-message" style="display: none;">No data or not enough snapshot records. Please add 3 or more mood <a href="/record">snapshots</a> to view an emotion chart and statistics here</div> 
                         <!-- Canvas element with ID "statistics-chart" -->
                         <canvas id="statistics-chart" width="800" height="400"></canvas>
                     </div>
