Implemented a password reset feature with reset tokens

--- a/views/forgetpassword.ejs
+++ b/views/forgetpassword.ejs
@@ -15,15 +15,15 @@
     </div>
     <form method="post" action="/forgetpassword" class="form-login" onsubmit="return validateForm()">
         <span class="login-icon"><i class="fa-solid fa-lock"></i></span>
-        <h2>Password Reset</h2>
-        <p>Enter your email below to reset your password</p>
+        <h2>Password reset</h2>
+        <p>Enter your email to send a password reset link</p>
 
         <!-- Display error messages if they exist -->
-       <div id="message" class="alert <% if (sentResetLink) { %>alert-success<% } else { %>alert-danger<% } %>" role="alert" <% if (!message) { %>style="display: none;"<% } %>>
-    <% if (message) { %>
-        <p><%= message %></p>
-    <% } %>
-</div>
+        <div id="message" class="alert <% if (sentResetLink) { %>alert-success<% } else { %>alert-danger<% } %>" role="alert" <% if (!message) { %>style="display: none;"<% } %>>
+            <% if (message) { %>
+                <p><%= message %></p>
+            <% } %>
+        </div>
 
         <!-- Email field -->
         <div class="form-group">
