--- a/views/forgetpassword.ejs
+++ b/views/forgetpassword.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forgot password - Mood Trace</title>
+    
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -15,7 +22,7 @@
     </div>
     <form method="post" action="/forgetpassword" class="form-login" onsubmit="return validateForm()">
         <span class="login-icon"><i class="fa-solid fa-lock"></i></span>
-        <h2>Password reset</h2>
+        <h2>Forgot password</h2>
         <p>Enter your email to send a password reset link</p>
 
         <!-- Display error messages if they exist -->
